tests/ui/suggestions/fn-needing-specified-return-type-param.stderr
error[E0282]: type annotations needed
  --> $DIR/fn-needing-specified-return-type-param.rs:3:13
   |
LL |     let _ = f;
   |             ^ cannot infer type of the type parameter `A` declared on the function `f`
   |
help: consider specifying a concrete type for the generic type `A`
   |
LL |     let _ = f::<SomeConcreteType>;
   |              ++++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
